--- a/app/src/main/res/layout/car_brand_list_item.xml
+++ b/app/src/main/res/layout/car_brand_list_item.xml
@@ -2,19 +2,22 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_surface">
+    android:layout_margin="4dp"
+    android:background="@color/color_surface"
+    android:padding="8dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/car_brand_icon"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_marginTop="8dp"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,16 +25,17 @@
             tools:src="@drawable/ic_mercedes" />
 
         <TextView
-            android:id="@+id/car_brand_text"
+            android:id="@+id/car_brand_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:paddingHorizontal="8dp"
             android:textColor="@color/color_on_surface"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/car_brand_icon"
-            tools:text="Mercedess" />
+            tools:text="Mercedes" />
 
         <ImageView
             android:id="@+id/edit_button"
@@ -43,7 +47,7 @@
             android:src="@drawable/ic_edit"
             app:layout_constraintEnd_toStartOf="@id/delete_button"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/car_brand_text" />
+            app:layout_constraintTop_toBottomOf="@id/car_brand_name" />
 
         <ImageView
             android:id="@+id/delete_button"
