--- a/app/src/main/res/layout/fragment_admin_screen.xml
+++ b/app/src/main/res/layout/fragment_admin_screen.xml
@@ -7,27 +7,49 @@
     android:background="@color/color_background"
     tools:context=".ui.view.AdminScreenFragment">
 
-    <TextView
-        android:id="@+id/welcome_user_message"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/top_car_brands_list_toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        android:textColor="@color/color_on_background"
-        android:textSize="28sp"
-        android:textStyle="bold"
+        android:layout_marginTop="-25dp"
+        android:backgroundTint="@color/color_primary"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Welcome Andrei" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/admin_panel_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/admin_panel"
-        android:textColor="@color/color_on_background"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@id/welcome_user_message"
-        app:layout_constraintTop_toBottomOf="@id/welcome_user_message" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="25dp">
+
+            <TextView
+                android:id="@+id/welcome_user_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:textColor="@color/color_on_primary"
+                android:textSize="28sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Welcome Andrei" />
+
+            <TextView
+                android:id="@+id/admin_panel_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:text="@string/admin_panel"
+                android:textColor="@color/color_on_primary"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/welcome_user_message"
+                app:layout_constraintTop_toBottomOf="@id/welcome_user_message" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <include
         android:id="@+id/manage_users_button"
@@ -37,7 +59,7 @@
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toStartOf="@id/manage_cars_listing_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/admin_panel_label" />
+        app:layout_constraintTop_toBottomOf="@id/top_car_brands_list_toolbar" />
 
     <include
         android:id="@+id/manage_cars_listing_button"
