--- a/app/src/main/res/layout/brands_item.xml
+++ b/app/src/main/res/layout/brands_item.xml
@@ -36,4 +36,20 @@
         app:layout_constraintStart_toStartOf="@id/car_brand_cardview"
         app:layout_constraintTop_toBottomOf="@id/car_brand_cardview"
         tools:text="Mercedess" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        android:padding="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/car_brand_name">
+
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/color_primary" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
